sample-apps/chesse-apps/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cheddar
  name: cheddar
  namespace: default
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: cheddar
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: cheddar
    spec:
      containers:
        - image: errm/cheese:cheddar
          name: cheese
          # resources:
          #   limits:
          #     memory: 100Mi
          #   requests:
          #     cpu: 5m
          #     memory: 10Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: stilton
  name: stilton
  namespace: default
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: stilton
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: stilton
    spec:
      containers:
        - image: errm/cheese:stilton
          name: cheese
          # resources:
          #   limits:
          #     memory: 100Mi
          #   requests:
          #     cpu: 5m
          #     memory: 10Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: wensleydale
  name: wensleydale
  namespace: default
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: wensleydale
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: wensleydale
    spec:
      containers:
        - image: errm/cheese:wensleydale
          name: cheese
          # resources:
          #   limits:
          #     memory: 100Mi
          #   requests:
          #     cpu: 5m
          #     memory: 10Mi
