sample-apps/chesse-apps/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cheddar
spec:
  rules:
    - host: cheddar.k8s-sample-gke.jchengdev.com # <TODO> use Kustomize to extract hardcoded DNS
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cheddar
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stilton
spec:
  rules:
    - host: stilton.k8s-sample-gke.jchengdev.com # <TODO> use Kustomize to extract hardcoded DNS
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stilton
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wensleydale
spec:
  rules:
    - host: wensleydale.k8s-sample-gke.jchengdev.com # <TODO> use Kustomize to extract hardcoded DNS
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wensleydale
                port:
                  number: 80
